# f1-pitwall

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/cache/parsed/: 2023_r15_Q_1c15d4558c17.json  2024_r17_R_53161cac1747.json  2024_r1_Q_fbe7ad67b724.json  2024_r1_R_873307dcd15c.json  2024_r8_R_947576c5baf4.json
f1pitwall/: config.py
f1pitwall/app/: main.py  state.py
f1pitwall/app/components/: dna_view.py  driver_images.py  lap_chart.py  leaderboard.py  radar_chart.py  sidebar.py  strategy_view.py  telemetry_view.py
f1pitwall/data_pipeline/: __init__.py  cache.py  loader.py  parser.py
f1pitwall/driver_dna/: __init__.py  clustering.py  dna_report.py  feature_builder.py  similarity.py
f1pitwall/models/: driver.py  lap.py  session.py
f1pitwall/scoring_engine/: __init__.py  base.py  compositor.py  consistency.py  pace_efficiency.py  qualifying_perf.py  race_craft.py  tyre_management.py
f1pitwall/strategy_simulator/: __init__.py  pit_analyser.py  safety_car.py  strategy_report.py  undercut_sim.py
notebooks/: 2024_bahrain_analysis.ipynb
scripts/: test_dashboard.py  test_pipeline.py  test_scoring.py  test_strategy.py
