[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f1-pitwall"
version = "0.1.0"
description = "F1 analytics platform — driver ratings, strategy simulation, live telemetry"
requires-python = ">=3.11"
dependencies = [
    "fastf1>=3.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "rich>=13.0",          # pretty console output
    "pyarrow>=15.0",       # fast parquet caching
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "ipykernel",
    "jupyter",
]
viz = [
    "matplotlib>=3.8",
    "plotly>=5.20",
    "streamlit>=1.33",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true